# site-de-empregos

./: .env  .gitignore  .gitmodules  Cargo.toml  package-lock.json  tailwind.config.js
.github/workflows/: cd.yml
entities/src/: confirmation_request.rs  job.rs  lib.rs  membership.rs  permission.rs  prelude.rs  role.rs  role_permissions.rs  user.rs  user_roles.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240126_020426_create_users.rs  m20240126_115151_create_roles_permissions.rs  m20240127_012554_add_created_at_on_jobs.rs  m20240201_205352_seed_permissions.rs  m20240201_215115_seed_admin_role.rs  m20240206_122941_add_security_columns_to_user.rs  m20240206_131940_create_membership_table.rs  m20240223_172837_create_confirmation_table.rs
project/: .dockerignore  compose.yaml  dockerfile  requirements.txt  run.sh
project/app/: __init__.py  app.db  extensions.py
project/app/admin/: __init__.py  routes.py
project/app/api/: __init__.py
project/app/api/jobs/: __init__.py  routes.py
project/app/api/users/: __init__.py  routes.py
project/app/models/: jobs.py  permissions.py  roles.py  users.py
project/frontend/: Cargo.toml
project/frontend/admin/: Cargo.toml  index.html  tailwind.config.js
project/frontend/admin/src/: app.rs  main.rs
project/frontend/admin/src/components/: auth.rs  floating.rs  form_input.rs  menu.rs  mod.rs
project/frontend/admin/src/components/notifications/: component.rs  factory.rs  mod.rs
project/frontend/admin/src/pages/: dashboard.rs  interested.rs  jobs.rs  login.rs  mod.rs  settings.rs
project/frontend/common/: Cargo.toml
project/frontend/common/src/: lib.rs
project/frontend/www/: Cargo.toml  index.html  tailwind.config.js  tailwind.scss
project/frontend/www/src/: app.rs  main.rs
project/frontend/www/src/components/: footer.rs  form_input.rs  job_list.rs  mod.rs  navbar.rs  submit_button.rs
project/frontend/www/src/pages/: home.rs  jobs.rs  mod.rs
project/frontend/www/src/pages/handlers/: mod.rs  not_found.rs
scripts/: payment_api.py
src/: app.rs  lib.rs  main.rs
src/components/: footer.rs  mod.rs  navbar.rs
src/functions/: embed.rs  mod.rs
src/pages/: homepage.rs  jobinfo.rs  jobspage.rs  mod.rs  profile.rs
src/pages/editors/: jobs.rs  mod.rs  users.rs
src/pages/handlers/: login.rs  mail_confirm.rs  mod.rs  not_found.rs  register.rs
style/: tailwind.scss
templates/: verification_code.hbs
templates/layouts/: styles.hbs
