[package]
name = "vagasemaraxa"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["entities", "migration", "leptos-icons"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
http = { version = "1.0.0", optional = true }
leptos = { version = "0.6", git = "https://github.com/leptos-rs/leptos.git", branch = "nested-suspense-fix", features = ["serde", "nightly"] }
leptos_meta = { version = "0.6", git = "https://github.com/leptos-rs/leptos.git", branch = "nested-suspense-fix", features = ["nightly"] }
leptos_actix = { version = "0.6", git = "https://github.com/leptos-rs/leptos.git", branch = "nested-suspense-fix", optional = true }
leptos_router = { version = "0.6", git = "https://github.com/leptos-rs/leptos.git", branch = "nested-suspense-fix", features = ["nightly"] }
serde = { version = "1.0.195" }
wasm-bindgen = "=0.2.89"
dotenv = { version = "0.15.0", optional = true }
pyo3 = { version = "0.20.2", optional = true }

# Visuals
leptos_icons = { path = "leptos-icons" }
icondata = "0.3.0"
handlebars = {version = "5.1.0", optional = true }

# User identity management
actix-identity = { version = "0.7.0", optional = true }
actix-session = { version = "0.9.0", features = ["redis-rs-session"], optional = true }
password-hash = { version = "0.5.0", optional = true }
argon2 = { version = "0.5.3", optional = true }
lettre = { version = "0.11.4", features = ["tokio1", "tokio1-native-tls"], optional = true }
rand = { version = "0.8.5", optional = true }

# Database Management
sea-orm = { version = "0.12.12", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
], optional = true }
chrono = { version = "0.4.33", features = [
  "serde"
]}
entities = { path = "entities", optional = true }
migration = { path = "migration", optional = true }
serde_json = { version = "1.0.114", optional = true }
cfg-if = "1.0.0"

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "dep:actix-identity",
  "dep:password-hash",
  "dep:argon2",
  "dep:actix-session",
  "dep:leptos_actix",
  "dep:sea-orm",
  "dep:entities",
  "dep:migration",
  "dep:dotenv",
  "dep:pyo3",
  "dep:lettre",
  "dep:rand",
  "dep:handlebars",
  "dep:serde_json",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name   
output-name = "leptos_start"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg	
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# The tailwind input file.
#
# Optional, Activates the tailwind build
tailwind-input-file = "style/tailwind.scss"

# The tailwind config file.
#
# Optional, defaults to "tailwind.config.js" which if is not present
# is generated for you
tailwind-config-file = "tailwind.config.js"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "0.0.0.0:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
