[package]
name = "admin-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.17"
# The frontend framework
yew = {version = "0.21", features = ["csr"]}
yew-router = "0.18"
yew_icons = {version = "0.8", features = ["LucideLayoutDashboard", "BootstrapGraphUp", "LucideSettings", "BootstrapBuildingExclamation", "BootstrapPeople", "BootstrapTrash", "BootstrapPencil"]}
yew-notifications = { git = "https://github.com/orangethewell/yew-notifications.git" }
bounce = "0.9.0"
uuid = { version = "1.3.0", features = ["v4", "js"] }
time = { version = "0.3.20", features = ["wasm-bindgen"] }
# WebAssembly bindgen
wasm-bindgen = "0.2.87"
gloo = {version = "0.10.0", features = ["storage"]}
serde-wasm-bindgen = "0.4"
web-sys = {version = "*", features = ["HtmlTextAreaElement", "Element", "HtmlInputElement", "Document", "DomParser", "SupportedType", "HtmlCollection", "DragEvent", "DataTransfer", "FileList"]}
# Reqwasm will be used to send request to the backend
reqwasm = {version = "0.4.0", features = ["json"]}
# A rust serialization library for interacting data between the backend and frontend
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
common = {path = "../common"}