[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
reqwasm = {version = "0.4.0", features = ["json"]}
wasm-bindgen = "0.2.87"
web-sys = {version = "*", features = ["Url", "Location"]}
gloo = {version = "0.10.0"}
serde-wasm-bindgen = "0.4"
chrono = { version = "0.4.20", default-features = false, features = ["clock", "std", "serde"] }