[package]
name = "web-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = {path = "../common"}
derive_more = "0.99.17"
# The frontend framework
yew = {version = "0.21", features = ["csr"]}
yew-router = "0.18"
yew_icons = {version = "0.8", features = ["LucideMenu", "BootstrapBriefcase"]}
# WebAssembly bindgen
wasm-bindgen = "0.2.87"
gloo = {version = "0.10.0", features = ["storage"]}
serde-wasm-bindgen = "0.4"
web-sys = {version = "*", features = ["HtmlTextAreaElement", "Document", "DomParser", "SupportedType", "HtmlCollection"]}
# Markup as HTML
pulldown-cmark = "0.9.3"
# Reqwasm will be used to send request to the backend
reqwasm = {version = "0.4.0", features = ["json"]}
# A rust serialization library for interacting data between the backend and frontend
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
